terminando vista detalle

--- a/componentes/src/main/res/values/strings.xml
+++ b/componentes/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Rappi Componentes</string>
     <string name="imagen_pelicula">Imagen película</string>
+    <string name="sombreado">sombreado</string>
 
 </resources>
