--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RappiDemo</string>
     <string name="end_default_description">Tenemos\nmás opciones\npara ti</string>
     <string name="end_default_button">Ver más</string>
+    <string name="votes">votes</string>
 </resources>
